--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -16,17 +16,32 @@ security:
         main:
             lazy: true
             provider: app_user_provider
+            custom_authenticator: App\Security\LoginFormAutentificatorAuthenticator
+            logout:
+                path: app_logout
+                # where to redirect after logout
+                target: app_login
+
+            remember_me:
+                secret: '%kernel.secret%'
+                lifetime: 604800
+                path: /
+                # by default, the feature is enabled by checking a checkbox in the
+                # login form, uncomment the following line to always enable it.
+                #always_remember_me: true
 
             # activate different ways to authenticate
             # https://symfony.com/doc/current/security.html#the-firewall
 
             # https://symfony.com/doc/current/security/impersonating_user.html
             # switch_user: true
-
+    
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
     access_control:
-        # - { path: ^/admin, roles: ROLE_ADMIN }
+        - { path: ^/back/user, roles: ROLE_ADMIN }
+        - { path: ^/back/user, roles: ROLE_DOCTEUR, allow_if: false }
+        - { path: ^/back/user, roles: ROLE_PATIENTE, allow_if: false }
         # - { path: ^/profile, roles: ROLE_USER }
 
 when@test:
