--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -39,10 +39,11 @@ security:
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
     access_control:
-        - { path: ^/back/user, roles: ROLE_ADMIN }
-        - { path: ^/back/user, roles: ROLE_DOCTEUR, allow_if: false }
-        - { path: ^/back/user, roles: ROLE_PATIENTE, allow_if: false }
-        # - { path: ^/profile, roles: ROLE_USER }
+    - { path: ^/back/user, roles: ROLE_ADMIN } #naamel acces ken lil admin lil back o ken mch authetifier yarjaa lil login
+    - { path: ^/back/user, roles: ROLE_DOCTEUR, allow_if: false } #mch admin ikoli access denied
+    - { path: ^/back/user, roles: ROLE_PATIENTE, allow_if: false }
+    - { path: ^/front, roles: IS_AUTHENTICATED_FULLY } #had mayodkhel lil front ken o howa authentifier snn iraj3ou lil login
+    # - { path: ^/profile, roles: ROLE_USER }
 
 when@test:
     security:
