--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -3,3 +3,10 @@ controllers:
         path: ../src/Controller/
         namespace: App\Controller
     type: attribute
+index:
+    path: /
+    controller: Symfony\Bundle\FrameworkBundle\Controller\RedirectController::redirectAction
+    defaults:
+        route: app_login
+        permanent: true
+        #ki nodkhel baed symfony start toul ihezni lil login
