--- a/.env
+++ b/.env
@@ -36,6 +36,6 @@ DATABASE_URL="mysql://root@127.0.0.1:3306/NOURISHIAproduit?serverVersion=10.5.8-
 MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
 ###< symfony/messenger ###
 
-###> symfony/mailer ###
-MAILER_DSN=null://null
+# Looking to send emails in production? Check out our Email API/SMTP product!
+MAILER_DSN="smtp://dc3516bf2e1184:50ab8cf1ee5042@sandbox.smtp.mailtrap.io:2525"
 ###< symfony/mailer ###
