--- a/config/services.yaml
+++ b/config/services.yaml
@@ -4,12 +4,19 @@
 # Put parameters here that don't need to change on each machine where the app is deployed
 # https://symfony.com/doc/current/best_practices.html#use-parameters-for-application-configuration
 parameters:
+     # Get these values from environment variables
+    # app.sendgrid.api_key: '%env(SENDGRID_API_KEY)%'
+    # app.sendgrid.sender_email: '%env(SENDGRID_SENDER_EMAIL)%'
+    # app.sendgrid.sender_name: '%env(SENDGRID_SENDER_NAME)%'
+    default_sender_email: 'chebishaima@gmail.com'
+    default_sender_name: 'shayma'
 
 services:
     # default configuration for services in *this* file
     _defaults:
         autowire: true      # Automatically injects dependencies in your services.
         autoconfigure: true # Automatically registers your services as commands, event subscribers, etc.
+      
 
     # makes classes in src/ available to be used as services
     # this creates a service per class whose id is the fully-qualified class name
@@ -19,6 +26,23 @@ services:
             - '../src/DependencyInjection/'
             - '../src/Entity/'
             - '../src/Kernel.php'
+      # controllers are imported separately to make sure services can be injected
+    App\Controller\:
+        resource: '../src/Controller'
+        tags: ['controller.service_arguments']        
 
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
+    
+   
+    App\Service\SimpleMailer:
+        arguments:
+            $apiKey: '%env(SENDGRID_API_KEY)%'
+            $senderEmail: '%env(SENDGRID_SENDER_EMAIL)%'
+            $senderName: '%env(SENDGRID_SENDER_NAME)%'
+
+    # Configure the GmailMailer service
+    App\Service\GmailMailer:
+        arguments:
+            $defaultSender: '%default_sender_email%'
+            $defaultSenderName: '%default_sender_name%'        
